# wordshk-tools

./: .gitignore  Cargo.toml  README.md  all.html  charlist.json  crates.js  enum.AltLang.html  enum.SegmentType.html  fn.is_punctuation.html  fn.link.html  fn.main.html  fn.parse_alt_clause.html  fn.parse_br.html  fn.parse_clause.html  fn.parse_content.html  fn.parse_defs.html  fn.parse_dict.html  fn.parse_eg.html  fn.parse_eng_clause.html  fn.parse_multiline_clause.html  fn.parse_named_clause.html  fn.parse_partial_pr_clause.html  fn.parse_partial_pr_named_clause.html  fn.parse_pr_clause.html  fn.parse_rich_def.html  fn.parse_simple_def.html  fn.parse_tags.html  fn.simple_clause.html  fn.text.html  fn.to_apple_dict.html  generate_word_frequencies.sh  index.html  search-index.js  settings.html  sidebar-items.js  source-files.js  struct.Def.html  struct.Eg.html  struct.Entry.html  struct.PUNCTUATIONS.html  (+7 more)
apple_dict/: wordshk.css
charemb/: Cangjie5_HK.txt  HKSCS2016.json  README.md  big5-2003.txt  calculate_cangjie_repetitions.py  casia_charset.txt  cluster.py  combine_vec.py  combined_vecs_add.pt  combined_vecs_concat_umap.pt  dataset.py  eval_pairs.json  eval_vec.py  expand_wordshk_chars.py  extract_bert_vec.py  extract_char_vec.py  extract_whisper_vec.py  extract_wordshk_chars.py  filter_mistake_pairs.py  found_pairs_add.json  found_pairs_bert.json  found_pairs_char.json  found_pairs_concat.json  found_pairs_concat_umap.json  found_pairs_whisper.json  generate_eval_pairs.py  generate_similar_chars.py  generate_variants.py  mistakes.csv  model.py  reduce_vec.py  search_demo.py  similar_chars.txt  similar_chars_10.txt  similar_chars_100.txt  test_combined_vec.py  train.py  utils.py  variants.txt  wordshk_chars.txt  (+1 more)
data/: generate_glove_300d.py  hk_variant_map_safe.rs  hk_variant_map_safe.tsv  lihkg_frequencies.rs  lihkg_frequencies.tsv  mandarin_variants.rs  mandarin_variants.tsv  variant_to_us_english.rs  word_frequencies.rs  wordshk_english_vocab.txt
data/char_jyutpings/: charlist.rs  charlist_processed.json  generate_charlist.py  process_charlist.py
data/simp_trad_conversions/: common_trad_to_simp.tsv  extract_iconic_simps.py  extract_iconics.py  hk_variants.tsv  iconic_simps.rs  iconic_trads.rs  simp_to_trad.tsv  trad_to_simp.tsv
docs/: all.html  fn.is_punctuation.html  fn.parse_alt_clause.html  fn.parse_br.html  fn.parse_content.html  fn.parse_eg.html  fn.parse_eng_clause.html  fn.parse_multiline_clause.html  fn.parse_partial_pr_clause.html  fn.parse_partial_pr_named_clause.html  fn.parse_tags.html  fn.text.html  sidebar-items.js  type.AltClause.html  type.Clause.html  type.Dict.html
examples/benchmark_search/: Cargo.toml
examples/benchmark_search/benches/: pr_search.rs
examples/export_api/: .gitignore  Cargo.toml  bisyllabic_word_jyutpings.json  hbl_words.csv  mapping.jsonl  mappings_eng.jsonl  mappings_pos_pr_eng.jsonl  samples_eng.tsv  samples_pos_pr_eng.tsv  try_minilm_embeddings.py  try_openai_embeddings.py
examples/export_api/src/: main.rs
examples/export_apple_dict/: Cargo.toml  README.md
examples/export_json_dict/: Cargo.toml
examples/export_sqlite_db/: .gitignore  Cargo.toml
examples/export_sqlite_db/src/: main.rs
examples/parse_dict/: Cargo.toml  eng_definitions.json  formal_words.txt  jyutping_sentences.txt  variants.txt
genai/: .gitignore  README.md  count_syllables.py  deepseek_api_key.txt  doubao_api_key.txt  eval_pos_tagging.py  eval_word_segmentation.py  extract_mandarin_translations.py  extract_mandarin_variants.py  fix_results.py  gen_hkcancor_sft_dataset.py  hkcancor_pos_tagged_errors.jsonl  pos_prompt.txt  pos_tag_words.py  segment_words.py  sensechat.py  sensenova_api_key.csv  translate_def.py  translate_entry.py  translate_entry_prompt.txt  visualize_pos_errors.py  word_segmentation_prompt.txt
genai/data/: hkcancor_sft_train.jsonl  hkcancor_sft_validation.jsonl  pos_hkcancor_prompt_v2.txt  pos_prompt_v2.txt  pos_ud_yue_prompt_v1.txt  pos_ud_yue_prompt_v1_max_diversity_segmentation_given.txt  pos_ud_yue_prompt_v1_simplified_segmentation_given.txt  pos_ud_yue_prompt_v2.txt  pos_ud_yue_prompt_v2_max_diversity_segmentation_given.txt  pos_ud_yue_prompt_v2_segmentation_given.txt  t2s.txt  translate_def_prompt_v3.json
genai/outputs/: hkcancor_errors.jsonl  hkcancor_pos_tagged_deepseek-chat.jsonl  hkcancor_pos_tagged_errors_deepseek-chat.jsonl  hkcancor_pos_tagged_errors_deepseek-chat_prompt_v1.jsonl  hkcancor_segmented.jsonl  pos_errors_hkcancor_doubao-pro-32k-sample-2500_global_step_22_prompt_v1.jsonl  pos_errors_ud_yue_deepseek-chat_prompt_v1_max_diversity_segmentation_given.jsonl  pos_errors_ud_yue_deepseek-chat_prompt_v1_prompt_dataset_hkcancor.jsonl  pos_errors_ud_yue_doubao-lite-32k_prompt_v1.jsonl  (+37 more)
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerrun.aws.json  README.md
server/src/: main.rs
src/: app_api.rs  cantonese_romanizations.tsv  dict.rs  eg_index.rs  emit.rs  emit_apple_dict.rs  emit_html.rs  english_embedding.rs  english_index.rs  entry_group_index.rs  generate_english_index.rs  jyutping.rs  lean_rich_dict.rs  lib.rs  main.rs  mandarin_variant_index.rs  parse.rs  pr_index.rs  rich_dict.rs  search.rs  simp_to_trad.rs  sqlite_db.rs  tests.rs  unicode.rs  variant_index.rs
tts/: .gitignore  README.md  clear_bucket.py  compress.py  constants.py  get_bucket.py  get_sts_auth.py  split_audio_folder.py  tts.py  upload_audio_to_hf.py  upload_to_bucket.py  verify.py
wordshk_apple/: Makefile  front_back_matter.html  install.sh  wordshk.css  wordshk.plist
wordshk_tools/: enum.AltLang.html  enum.SegmentType.html  fn.link.html  fn.main.html  fn.parse_clause.html  fn.parse_defs.html  fn.parse_dict.html  fn.parse_named_clause.html  fn.parse_pr_clause.html  fn.parse_rich_def.html  fn.parse_simple_def.html  fn.simple_clause.html  index.html  struct.Def.html  struct.Eg.html  struct.Entry.html  struct.PUNCTUATIONS.html  struct.Variant.html  type.Line.html  type.PrClause.html  type.Segment.html
(+10 files in other folders)
