[package]
name = "wordshk_tools"
description = "A combination of parsers and other tools for words.hk (粵典)"
repository = "https://github.com/AlienKevin/wordshk-tools"
version = "3.9.5-beta"
edition = "2018"
license = "MIT"

[dependencies]
lip = "5.1.1"
csv = "1.1"
lazy_static = "1.4.0"
indoc = "1.0"
unicode-segmentation = "1.8.0"
unicode-normalization = "0.1.19"
unicode_names2 = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.23", features = ["derive"] }
strsim = "0.10.0"
itertools = "0.10.3"
reqwest = { version = "0.11.8", features = ["blocking"] }
flate2 = "1.0.22"
regex = "1.5.5"
rust-stemmers = "^1.0"
deunicode = "1.3.1"
indexmap = "1.8.1"
fast2s = "0.3.0"
thesaurus = "0.2.0"
