[package]
name = "wordshk_tools"
description = "A combination of parsers and other tools for words.hk (粵典)"
repository = "https://github.com/AlienKevin/wordshk-tools"
version = "3.16.0-beta.10"
authors = ["Kevin Li <kevinli020508@gmail.com>"]
keywords = ["cantonese", "dictionary", "nlp"]
edition = "2021"
license = "MIT"

[dependencies]
lip = "8.1.2"
csv = "1.1"
lazy_static = "1.4.0"
indoc = "2.0"
unicode-segmentation = "1.8.0"
unicode-normalization = "0.1.19"
unicode_names2 = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25.0", features = ["derive"] }
strsim = "0.10.0"
itertools = "0.11.0"
reqwest = { version = "0.11.8", features = ["blocking"] }
regex = "1.5.5"
rust-stemmers = "^1.0"
deunicode = "1.3.1"
indexmap = "2.0.0"
fast2s = "0.3.1"
thesaurus = "0.5"
rayon = "1.7.0"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
rkyv = { version = "0.7.43", features = [ "alloc" ] }
