[package]
name = "wordshk_tools"
description = "A combination of parsers and other tools for words.hk (粵典)"
repository = "https://github.com/AlienKevin/wordshk-tools"
version = "3.16.0-beta.10"
authors = ["Kevin Li <kevinli020508@gmail.com>"]
keywords = ["cantonese", "dictionary", "nlp"]
edition = "2021"
license = "MIT"

[dependencies]
lip = "8.1.2"
csv = "1.1"
lazy_static = "1.4.0"
indoc = "2.0"
unicode-segmentation = "1.8.0"
unicode-normalization = "0.1.19"
unicode_names2 = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25.0", features = ["derive"] }
strsim = "0.10.0"
itertools = "0.11.0"
reqwest = { version = "0.11.8", features = ["blocking"] }
regex = "1.5.5"
rust-stemmers = "^1.0"
deunicode = "1.3.1"
indexmap = "2.0.0"
fast2s = { git = "https://github.com/AlienKevin/fast2s.git", rev = "aedb438cf4e8cf27ec65b236bdced865661d3146" }
thesaurus = "0.5"
rayon = "1.7.0"
levenshtein-diff = "0.2.4"
fst = { version = "0.4.7", features = ["levenshtein"] }

rusqlite = { version = "0.31.0", features = ["bundled"] }
r2d2_sqlite = { version = "0.24.0" }
r2d2 = { version = "0.8.10" }
ouroboros = "0.18.3"
