[package]
name = "wordshk_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
fastembed = "2.0.0"
once_cell = "1.19.0"
rkyv = "0.7.43"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
wordshk_tools = { git = "https://github.com/AlienKevin/wordshk-tools.git", rev = "34fda4050698806c17875cd94cffebf0bdb14751" }
finalfusion = "0.17.2"

[dependencies.ort]
version = "2.0.0-alpha.4"
features = ["download-binaries"]
