[package]
name = "export_api"
version = "0.1.0"
edition = "2021"

[dependencies]
wordshk_tools = { path = "../../" }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1.2"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
csv = "1"
itertools = "0.11.0"
